--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "J Lewis Kilgore",
   "license": "ISC",
   "dependencies": {
+    "async": "^2.5.0",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.17.2",
     "ejs": "^2.5.6",
