--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^4.10.4",
     "passport": "^0.3.2",
     "passport-github": "^1.1.0",
+    "passport-google-oauth": "^1.0.0",
     "passport-twitter": "^1.0.4",
     "request": "^2.81.0",
     "yelp-fusion": "^1.0.3"
