--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "passport": "^0.3.2",
     "passport-github": "^1.1.0",
     "passport-google-oauth": "^1.0.0",
+    "passport-google-oauth2": "^0.1.6",
     "passport-twitter": "^1.0.4",
     "request": "^2.81.0",
     "yelp-fusion": "^1.0.3"
